# poorcharlie

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  backtest-fixes.patch  pyproject.toml
deploy/: setup-proxy.sh
docs/: architecture_v2.md  interview-notes.md  pipeline.md
docs/architecture/: investagent.md
docs/external-reference/: ai-hedge-fund-analysis.md
output/: 1448_20260327_014737.md  1448_20260327_123331.md  1448_20260327_123331_debug.json  1448_20260327_193422.md  1448_20260327_193422_debug.json  BABA_20260327_231103.md  BABA_20260327_231103_debug.json
scripts/: llm_diag.py  run_overnight.py
scripts/backtest/: README.md  data_feeds.py  decision_schema.py  metrics.py  report.py  run_backtest.py  run_full_backtest.py  run_precompute.py  run_replay_s0_s1.py  run_triggers.py  strategy.py  temporal.py  test_e2e.py
scripts/monitoring/: __init__.py  backtest_state.py  dashboard.py  status.py
specs/: agent-implementations.md  backtesting.md  filing-extraction.md  integration-tests.md  repo-foundation.md  screening-and-portfolio.md
src/investagent/: __init__.py  cli.py  config.py  executors.py  llm.py  report.py
src/investagent/agents/: __init__.py  accounting_risk.py  base.py  committee.py  context_helpers.py  critic.py  filing.py  financial_quality.py  info_capture.py  net_cash.py  portfolio.py  triage.py  valuation.py
src/investagent/datasources/: akshare_source.py  cninfo.py  historical_market_data.py  hkex.py  pdf_extract.py  proxy_rotator.py
src/investagent/prompts/: __init__.py  soul.py
src/investagent/schemas/: __init__.py  accounting_risk.py  candidate.py  committee.py  common.py  company.py  critic.py  filing.py  financial_quality.py  info_capture.py  mental_models.py  net_cash.py  portfolio.py  screener.py  triage.py  valuation.py
src/poorcharlie/: cli.py  config.py  executors.py  llm.py  llm_profiles.py
tests/: conftest.py
tests/fixtures/: sample_intake.json
tests/integration/: test_pipeline_pass.py  test_pipeline_reject.py  test_pipeline_stop.py
tests/unit/: test_llm.py  test_report.py
(+59 files in other folders)
