[project]
name = "investagent"
version = "0.1.0"
description = "Munger-style value investing multi-subagent system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic",
    "jinja2",
    "edgartools",
    "scrapling[fetchers]",
    "yfinance",
    "pymupdf4llm",
    "akshare",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
investagent = "investagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
