[project]
name = "investagent"
version = "0.1.0"
description = "Munger-style value investing multi-subagent system"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "anthropic",
    "jinja2",
    "edgartools",
    "scrapling[fetchers]",
    "yfinance",
    "pymupdf4llm",
    "akshare",
    "backtrader>=1.9.78.123",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.2",
    "efinance>=0.5.8",
    "baostock>=0.8.9",
    "rapidocr-onnxruntime>=1.4.4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
investagent = "investagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
